--- a/clock/src/components/clock-container/clock-container.css
+++ b/clock/src/components/clock-container/clock-container.css
@@ -3,38 +3,15 @@
     height: 300px;
     background-color: rgba(0, 0, 0, .8);
     border-radius: 50%;
-    border: 3px solid rgb(255, 255, 255, .9);
     position: relative;
+    border: 10px solid #5f5f5f;
 }
-
-.clock .number {
-    --rotation: 0;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transform: rotate(var(--rotation));
-    color: white;
-}
-
-.clock .number1 { --rotation :30deg; }
-.clock .number2 { --rotation :60deg; }
-.clock .number3 { --rotation :90deg; }
-.clock .number4 { --rotation :120deg; }
-.clock .number5 { --rotation :150deg; }
-.clock .number6 { --rotation :180deg; }
-.clock .number7 { --rotation :210deg; }
-.clock .number8 { --rotation :240deg; }
-.clock .number9 { --rotation :270deg; }
-.clock .number10 { --rotation :300deg; }
-.clock .number11 { --rotation :330deg; }
 
 .clock .hand {
     --rotation : 0;
     position: absolute;
     bottom: 50%;
     left: 50%;
-    border: 1px solid white;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     transform-origin: bottom;
@@ -55,20 +32,20 @@
 
 .clock .hand.second {
     width: 2px;
-    height: 48%;
+    height: 46%;
     background-color: red;
 }
 
 
 .clock .hand.minute {
     width: 6px;
-    height: 43%;
+    height: 39%;
     background-color: grey;
 }
 
 
 .clock .hand.hour {
     width: 10px;
-    height: 38%;
+    height: 30%;
     background-color: white;
 }
